--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,7 @@
 :root{
   --section-padding: 15px;
   --footer-height: 40px;
-  --header-height: 40px;
+  --header-height: 80px;
   --section-horizontal-padding: 40px;
   --section-vertical-padding: 100px;
   
@@ -26,6 +26,8 @@
     border: solid 1px silver;
     padding: 5px 15px;
     background-color: darkorange;
+    user-select: none;
+    cursor: pointer;
   }
 }
 #footer{
@@ -81,8 +83,36 @@
     }
   }
 }
+.btn{
+  padding: 5px 15px;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 5px;
+  border: solid 1px #555;
+  background-color: chocolate;
+}
 .fp-scroller{
   min-height: 100%;
   display: flex;
   flex-direction: column;
 }
+// === waves directive ===
+.waves{
+  position: absolute;
+  border-radius: 50%;
+  width: 5px;
+  height: 5px;
+  animation: wavesEffect 1.1s 1;
+  opacity: 0;
+}
+@keyframes wavesEffect {
+ 0% {
+   transform: scale(1);
+   opacity: 0.5;
+ }
+ 100% {
+   transform: scale(100);
+   opacity: 0;
+ }
+}
+// === waves directive ===
