--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,15 +1,3 @@
-:root{
-  --section-padding: 15px;
-  --footer-height: 40px;
-  --header-height: 80px;
-  --section-horizontal-padding: 40px;
-  --section-vertical-padding: 100px;
-  
-  --rgb-red: 110;
-  --rgb-green: 166;
-  --rgb-blu: 157;
-}
-
 #header{
   position: fixed;
   height: var(--header-height);
@@ -42,9 +30,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  //display: flex;
-  //flex-direction: column;
-  /*min-height: 100vh;*/
   &-content{
     height: 100%;
     flex-grow: 1;
@@ -116,3 +101,13 @@
  }
 }
 // === waves directive ===
+// === page effects ===
+.fade-route{
+  &-enter-active{
+    transition: all ease 1.5s;
+  }
+  &-enter{
+    opacity: 0;
+  }
+}
+// === page effects ===
