--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap');
+
+body{
+  font-family: 'Red Rose', cursive;
+}
 #header{
   position: fixed;
   height: var(--header-height);
@@ -111,3 +116,116 @@
   }
 }
 // === page effects ===
+#header{
+  display: flex;
+  justify-content: center;
+  background-color: var(--main) !important;
+  > div{
+    margin-right: 20px;
+    &:last-child{
+      margin-right: 0;
+    }
+  }
+}
+.center{
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+.btn{
+  user-select: none;
+  cursor: pointer;
+  margin-right: 15px;
+  &:last-child{
+    margin-right: 0;
+  }
+  &-wrapper{
+    position: relative;
+    cursor: pointer;
+  }
+  &-picker{
+    
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    background-image: url("../icons/color-picker.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  &-trans{
+    padding: 5px 10px;
+    border: solid 1px #444;
+    border-radius: 5px;
+    display: inline-block;
+  }
+}
+.theme-picker{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: calc(100% + 15px);
+  left: 50%;
+  border-radius: 15px;
+  border: solid 1px black;
+  background-color: rgba(#666, .5);
+  padding: 20px;
+  opacity: 0;
+  transform: translate(-50%, -15px) scale(.6);
+  transition: opacity .3s, transform .3s;
+  pointer-events: none;
+  &.open{
+    opacity: 1;
+    transform: translate(-50%, 0px) scale(1);
+    pointer-events: visible;
+  }
+  .row{
+    margin-bottom: 5px;
+    &:last-child{
+      margin-bottom: 0;
+    }
+  }
+  input{
+    padding: 4px 10px;
+    border-radius: 5px;
+    width: 100px;
+    color: dodgerblue;
+  }
+}
+.nav{
+  &-list{
+    display: flex;
+  }
+  &-item{
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    margin-right: 10px;
+    &-1{
+      background: rgb(calc(var(--rgb-red) * 1.091), calc(var(--rgb-green) * 0.1212), calc(var(--rgb-blu) * 0.22));
+    }
+    &-2{
+      background: rgb(calc(var(--rgb-red) * 0.179), calc(var(--rgb-green) * 1.957), calc(var(--rgb-blu) * 2.0));
+    }
+    &-3{
+      background: rgb(calc(var(--rgb-red) * 1.69), calc(var(--rgb-green) * 0.2), calc(var(--rgb-blu) * 1.11));
+    }
+    &-4{
+      background: rgb(calc(var(--rgb-red) * 0.271), calc(var(--rgb-green) * 0.3243), calc(var(--rgb-blu) * 2.8));
+    }
+    &-5{
+      background: rgb(calc(var(--rgb-red) * 1.199), calc(var(--rgb-green) * 1.19), calc(var(--rgb-blu) * 0.88));
+    }
+    &-6{
+      background: rgb(calc(var(--rgb-red) * 0.484), calc(var(--rgb-green) * 1.654), calc(var(--rgb-blu) * 1.33));
+    }
+  }
+}
+.fade{
+  &-enter-active, &-leave-active{
+    transition: all .3s;
+  }
+  &-enter, &-leave-to{
+    opacity: 0;
+  }
+}
